# vscode-qt-for-python

./: .commitlintrc  .commitlintrc.json  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  .tool-versions  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  clean.js  package-lock.json  package.json  precompile.js  temp.sh  tsconfig.json  tslint.json  vsc-extension-quickstart.md  webpack.config.js
.github/: dependabot.yml
.husky/: pre-commit
images/: logo.psd  preview_all.psd
languages/: qmake-language-configuration.json  qml-language-configuration.json  qmldir-language-configuration.json  qss-language-configuration.json
python/: .coveragerc  .gitignore  .pylintrc  .tool-versions  poetry.toml  pyproject.toml  pytest.ini
python/scripts/: common.py  designer.py  linguist.py  lrelease.py  lupdate.py  qml.py  qmlformat.py  qmllint.py  qmlls.py  rcc.py  uic.py
python/scripts/utils/: __init__.py
python/tests/: __init__.py  test_designer.py  test_linguist.py  test_lrelease.py  test_lupdate.py  test_qml.py  test_qmlformat.py  test_qmllint.py  test_qmlls.py  test_rcc.py  test_sample.py  test_scripts.py  test_uic.py  test_utils.py
python/tests/assets/: multiline_string.qml  predefined-variable-resolver-test.txt  syntax_error.qml
python/tests/assets/linguist/: .gitignore
python/tests/assets/linguist/widget/: main.py
python/tests/assets/qml/: .qmllint.ini  application.qml  missing_import.qml  pass.qml  schema.json  unformatted.qml  unknown_import.qml
python/tests/assets/qrc/: .gitignore  sample.qrc
python/tests/assets/qss/: QAbstractScrollArea.qss  QCheckBox.qss  QComboBox.qss  QDockWidget.qss  QLabel.qss
python/tests/assets/syntax_samples/: qmldir  sample.qrc
python/tests/assets/ui/: sample.ui
snippets/: qml.json  qmldir.json  qss.json
src/: assertions.ts  command.ts  commands.ts  configuration.ts  configurations.ts  constants.ts  extension.js  extension.js.map  extension.ts  live-compilations.ts  message.ts  paths.ts  predefined-variable-resolver.ts  python.ts  run.ts  (+9 more)
(+160 files in other folders)
