[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
PySide6 = "^6.3.1"
PyQt6 = "^6.3.1"
PySide2 = "^5.15.2"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
