[tool.poetry]
name = "python"
version = "0.1.0"
description = "Scripts to communicate between the extension and Qt for Python library."
authors = ["Shuang Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7.2"
pyside6 = "^6.5.1.1"
pyqt6 = "^6.5.1"
pyside2 = { version = "^5.15.2.1", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }
pyqt5 = { version = "^5.15.7", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
jsonschema = "^4.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
